crates/kwokka-macros/tests/ui/unsupported.rs
#[kwokka::main(stealing, workers = 8)]
async fn main() {}
